@@ -40,6 +40,7 @@ import org.eclipse.jetty.io.Retainable;
 import org.eclipse.jetty.io.RetainableByteBuffer;
 import org.eclipse.jetty.util.BufferUtil;
 import org.eclipse.jetty.util.Callback;
+import org.eclipse.jetty.util.TypeUtil;
 import org.eclipse.jetty.util.component.LifeCycle;
 import org.eclipse.jetty.util.thread.AutoLock;
 import org.eclipse.jetty.util.thread.ExecutionStrategy;
@@ -300,6 +301,12 @@ public class HTTP2Connection extends AbstractConnection implements Parser.Listen
         session.onConnectionFailure(error, reason);
     }
 
+    @Override
+    public String toConnectionString()
+    {
+        return "%s@%x[%s]".formatted(TypeUtil.toShortName(getClass()), hashCode(), strategy);
+    }
+
     protected class HTTP2Producer implements ExecutionStrategy.Producer
     {
         private final Callback fillableCallback = new FillableCallback();
@@ -374,10 +381,17 @@ public class HTTP2Connection extends AbstractConnection implements Parser.Listen
                     {
                         shutdown = true;
                         session.onShutdown();
-                        // The onShutDown() call above may have produced a task.
+                        // The onShutdown() call above may have produced a task.
                         return pollTask();
                     }
                 }
+            }
+            catch (Throwable x)
+            {
+                // This should not happen.
+                LOG.warn("Unexpected exception while producing {}", this, x);
+                session.onConnectionFailure(ErrorCode.INTERNAL_ERROR.code, x.toString());
+                return null;
             }
             finally
             {
@@ -430,7 +444,13 @@ public class HTTP2Connection extends AbstractConnection implements Parser.Listen
         @Override
         public String toString()
         {
-            return String.format("%s@%x", getClass().getSimpleName(), hashCode());
+            String countState;
+            try (AutoLock l = lock.tryLock())
+            {
+                boolean held = l.isHeldByCurrentThread();
+                countState = held ? String.valueOf(tasks.size()) : "undefined";
+            }
+            return "%s@%x[taskQueue=%s]".formatted(TypeUtil.toShortName(getClass()), hashCode(), countState);
         }
     }
 
