@@ -77,6 +77,7 @@ import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 import static org.awaitility.Awaitility.await;
+import static org.eclipse.jetty.tests.testers.ProcessWrapper.JETTY_START_SEARCH;
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.containsString;
 import static org.hamcrest.Matchers.equalTo;
@@ -416,8 +417,9 @@ public class DistributionTests extends AbstractJettyHomeTest
         );
         try (JettyHomeTester.Run run1 = distribution.start("--approve-all-licenses", "--add-modules=" + mods))
         {
-            assertTrue(run1.awaitFor(START_TIMEOUT, TimeUnit.SECONDS));
+            assertTrue(run1.awaitForStart());
             assertEquals(0, run1.getExitValue());
+            LOG.atInfo().setMessage(run1.logs().get()).log();
             assertTrue(Files.exists(distribution.getJettyBase().resolve("resources/log4j2.xml")));
 
             Path war = distribution.resolveArtifact("org.eclipse.jetty." + env + ".demos:jetty-" + env + "-demo-jsp-webapp:war:" + jettyVersion);
@@ -426,8 +428,7 @@ public class DistributionTests extends AbstractJettyHomeTest
             int port = Tester.freePort();
             try (JettyHomeTester.Run run2 = distribution.start("jetty.http.port=" + port))
             {
-                assertTrue(run2.awaitConsoleLogsFor("Started oejs.Server@", START_TIMEOUT, TimeUnit.SECONDS));
-
+                assertTrue(run2.awaitForJettyStart());
                 startHttpClient();
                 ContentResponse response = client.GET("http://localhost:" + port + "/test/index.jsp");
                 assertEquals(HttpStatus.OK_200, response.getStatus());
@@ -576,8 +577,8 @@ public class DistributionTests extends AbstractJettyHomeTest
         );
         try (JettyHomeTester.Run run1 = distribution.start("--add-modules=" + mods))
         {
-            assertTrue(run1.awaitFor(START_TIMEOUT, TimeUnit.SECONDS));
-            assertEquals(0, run1.getExitValue());
+            assertTrue(run1.awaitForStart());
+            assertEquals(0, run1.getExitValue(), run1.logs());
 
             Path war = distribution.resolveArtifact("org.eclipse.jetty." + env + ".demos:jetty-" + env + "-demo-proxy-webapp:war:" + jettyVersion);
             distribution.installWar(war, "proxy");
@@ -716,9 +717,8 @@ public class DistributionTests extends AbstractJettyHomeTest
 
         try (JettyHomeTester.Run run1 = distribution.start("--approve-all-licenses", "--add-modules=http,logging-log4j2"))
         {
-            assertTrue(run1.awaitFor(START_TIMEOUT, TimeUnit.SECONDS));
-            assertEquals(0, run1.getExitValue());
-
+            assertTrue(run1.awaitForStart());
+            assertEquals(0, run1.getExitValue(), run1.logs());
             Files.copy(Paths.get("src/test/resources/log4j2.xml"),
                 distribution.getJettyBase().resolve("resources").resolve("log4j2.xml"),
                 StandardCopyOption.REPLACE_EXISTING);
@@ -728,13 +728,9 @@ public class DistributionTests extends AbstractJettyHomeTest
             {
                 Path logFile = distribution.getJettyBase().resolve("logs").resolve("jetty.log");
                 await().atMost(10, TimeUnit.SECONDS).until(() -> Files.exists(logFile));
-                await().atMost(10, TimeUnit.SECONDS).until(() ->
-                {
-                    try (Stream<String> lines = Files.lines(logFile))
-                    {
-                        return lines.anyMatch(line -> line.contains("Started oejs.Server@"));
-                    }
-                });
+
+                await().atMost(10, TimeUnit.SECONDS)
+                        .until(() -> Files.readAllLines(logFile).stream().anyMatch(l -> l.contains(JETTY_START_SEARCH)));
 
                 startHttpClient();
                 ContentResponse response = client.GET("http://localhost:" + port);
@@ -758,8 +754,8 @@ public class DistributionTests extends AbstractJettyHomeTest
 
         try (JettyHomeTester.Run run1 = distribution.start("--approve-all-licenses", "--add-modules=http,logging-jul"))
         {
-            assertTrue(run1.awaitFor(START_TIMEOUT, TimeUnit.SECONDS));
-            assertEquals(0, run1.getExitValue());
+            assertTrue(run1.awaitForStart());
+            assertEquals(0, run1.getExitValue(), run1.logs());
 
             Path julConfig = run1.getConfig().getJettyBase().resolve("resources/java-util-logging.properties");
             assertTrue(Files.exists(julConfig));
@@ -768,7 +764,8 @@ public class DistributionTests extends AbstractJettyHomeTest
             int port = Tester.freePort();
             try (JettyHomeTester.Run run2 = distribution.start("jetty.http.port=" + port))
             {
-                assertTrue(run2.awaitConsoleLogsFor("Started oejs.Server@", START_TIMEOUT, TimeUnit.SECONDS));
+                assertTrue(run2.awaitConsoleLogsFor("Started oejs.Server@", START_TIMEOUT, TimeUnit.SECONDS),
+                    () -> String.join("\n", run2.getLogs()));
                 assertThat(run2.getLogs().stream()
                     // Check that the level formatting is that of the j.u.l. configuration file.
                     .filter(log -> log.contains("[FINE]"))
@@ -793,8 +790,8 @@ public class DistributionTests extends AbstractJettyHomeTest
 
         try (JettyHomeTester.Run run1 = distribution.start("--approve-all-licenses", "--add-modules=http,logging-jul-capture"))
         {
-            assertTrue(run1.awaitFor(START_TIMEOUT, TimeUnit.SECONDS));
-            assertEquals(0, run1.getExitValue());
+            assertTrue(run1.awaitForStart());
+            assertEquals(0, run1.getExitValue(), run1.logs());
 
             //Path jettyBase = run1.getConfig().getJettyBase();
 
@@ -943,8 +940,8 @@ public class DistributionTests extends AbstractJettyHomeTest
 
         try (JettyHomeTester.Run run1 = distribution1.start("--approve-all-licenses", "--add-modules=logging-logback,http"))
         {
-            assertTrue(run1.awaitFor(START_TIMEOUT, TimeUnit.SECONDS));
-            assertEquals(0, run1.getExitValue());
+            assertTrue(run1.awaitForStart());
+            assertEquals(0, run1.getExitValue(), run1.logs());
 
             //Path jettyBase = run1.getConfig().getJettyBase();
 
@@ -1507,6 +1504,93 @@ public class DistributionTests extends AbstractJettyHomeTest
                 ContentResponse response = client.GET("http://localhost:" + httpPort + "/proxy/test.txt");
                 assertThat(response.getStatus(), is(HttpStatus.OK_200));
                 assertThat(response.getContentAsString(), is(testFileContent));
+            }
+        }
+    }
+
+    @ParameterizedTest
+    @ValueSource(strings = {"ee9", "ee10"})
+    public void testEEProxyModule(String env) throws Exception
+    {
+        String jettyVersion = System.getProperty("jettyVersion");
+        JettyHomeTester distribution = JettyHomeTester.Builder.newInstance()
+            .jettyVersion(jettyVersion)
+            .build();
+
+        List<String> modules = List.of("http", toEnvironment("proxy", env), toEnvironment("deploy", env));
+        try (JettyHomeTester.Run run1 = distribution.start("--add-modules=" + String.join(",", modules)))
+        {
+            assertTrue(run1.awaitFor(5, TimeUnit.SECONDS));
+            assertEquals(0, run1.getExitValue());
+
+            // Create a custom module for the ServerConnector that represents the backend server.
+            Path jettyBaseModules = distribution.getJettyBase().resolve("modules");
+            Files.createDirectories(jettyBaseModules);
+            Path httpBackendModule = jettyBaseModules.resolve("http-backend.mod");
+            Files.writeString(httpBackendModule, """
+                [depend]
+                server
+                [xml]
+                etc/jetty-http-backend.xml
+                [ini-template]
+                # jetty.http.backend.port=9090
+                """, StandardOpenOption.CREATE);
+            Path jettyBaseEtc = distribution.getJettyBase().resolve("etc");
+            Files.createDirectories(jettyBaseEtc);
+            Path httpBackendXML = jettyBaseEtc.resolve("jetty-http-backend.xml");
+            Files.writeString(httpBackendXML, """
+                <?xml version="1.0"?>
+                <!DOCTYPE Configure PUBLIC "-//Jetty//Configure//EN" "https://jetty.org/configure_10_0.dtd">
+                <Configure id="Server" class="org.eclipse.jetty.server.Server">
+                  <Call name="addConnector">
+                    <Arg>
+                      <New class="org.eclipse.jetty.server.ServerConnector">
+                        <Arg name="server"><Ref refid="Server" /></Arg>
+                        <Arg name="acceptors" type="int">1</Arg>
+                        <Arg name="selectors" type="int">1</Arg>
+                        <Arg name="factories">
+                          <Array type="org.eclipse.jetty.server.ConnectionFactory">
+                            <Item>
+                              <New class="org.eclipse.jetty.server.HttpConnectionFactory">
+                                <Arg name="config"><Ref refid="httpConfig" /></Arg>
+                              </New>
+                            </Item>
+                          </Array>
+                        </Arg>
+                        <Set name="port"><Property name="jetty.http.backend.port" default="9090" /></Set>
+                        <Set name="name">backendConnector</Set>
+                      </New>
+                    </Arg>
+                  </Call>
+                </Configure>
+                """, StandardOpenOption.CREATE);
+
+            // Set up the backend application.
+            Path war = distribution.resolveArtifact("org.eclipse.jetty." + env + ".demos:jetty-" + env + "-demo-simple-webapp:war:" + jettyVersion);
+            distribution.installWar(war, "backend");
+            Path jettyBaseWebapps = distribution.getJettyBase().resolve("webapps");
+            Files.writeString(jettyBaseWebapps.resolve("backend.properties"), "environment=" + env, StandardOpenOption.CREATE);
+
+            int proxyPort = Tester.freePort();
+            int backendPort = Tester.freePort();
+            try (JettyHomeTester.Run run2 = distribution.start(
+                "jetty.http.port=" + proxyPort,
+                "jetty.http.selectors=1",
+                "jetty.http.backend.port=" + backendPort,
+                "--module=http-backend",
+                "jetty.proxy.contextPath=/proxy",
+                "jetty.proxy.proxyTo=http://localhost:%d/backend".formatted(backendPort)))
+            {
+                assertTrue(run2.awaitConsoleLogsFor("Started oejs.Server@", 5, TimeUnit.SECONDS), String.join(System.lineSeparator(), run2.getLogs()));
+
+                startHttpClient();
+                ContentResponse response = client.newRequest("localhost", proxyPort)
+                    .path("/proxy")
+                    .timeout(15, TimeUnit.SECONDS)
+                    .send();
+
+                assertEquals(HttpStatus.OK_200, response.getStatus(), String.join(System.lineSeparator(), run2.getLogs()));
+                assertThat(response.getContentAsString(), containsString("Hello World"));
             }
         }
     }
